--- a/WebFundamentals/Week 1/Day 2/Practice/ButtonS.css
+++ b/WebFundamentals/Week 1/Day 2/Practice/ButtonS.css
@@ -23,6 +23,6 @@ button{
     width: 100px;
     border: 1px solid black;
     margin-left: 70px;
-    box-shadow: 1px ;
+    box-shadow: 5px 5px 5px black;
     
 }
