--- a/WebFundamentals/Week 1/Day 3/Practice/flex.css
+++ b/WebFundamentals/Week 1/Day 3/Practice/flex.css
@@ -2,43 +2,53 @@
     width: 950px;
     background-color: silver;
     margin: 0px auto;
-    padding: 20px ;
+    padding: 20px;
 }
 .top-nav {
     height: 150px;
     background-color: green;
-    
 }
 .side-nav {
-    display: inline-block;
     height: 300px;
     width: 200px;
     background-color: blue;
-    margin-top: 20px;
-    margin-right: 20px;
-    vertical-align: top;
+    margin: 15px 0px;
+    margin-right: 30px;
 
+    
+    
 }
 .main {
-    display: inline-block;
-    height: 400px;
-    width: 725px;
-    background-color: #ff0000;
-    margin-top: 20px;
     
-
+    height: 400px;
+    width: 750px;
+    background-color: red;
+    margin-top: 15px;
+    
+    
+    
+    
 }
 .sub-content {
+    margin: 10px;
     display: inline-block;
     height: 200px;
     width: 210px;
     background-color: yellow;
-    margin: 15px 0px 15px 15px;
+
+
 }
 #advertisement {
     height: 120px;
-    width: 666px;
+    width: 670px;
     background-color: purple;
-    margin: 10px 0px 0px 15px ;
+    margin-left: 10px;
+    margin-top: 20px;
+    
+}
+.row {
+    display: flex;
+    justify-content: space-arround;
+    
 }
 
