--- a/WebFundamentals/Week 1/Day 3/Practice/navbar.css
+++ b/WebFundamentals/Week 1/Day 3/Practice/navbar.css
@@ -15,7 +15,7 @@
 }
 
 a{
-    
+    list-style-type: none;
     text-decoration: none;
     margin: 20px;
     color: white;
@@ -25,9 +25,9 @@ a{
     font-weight: 900;
 }
 
-    
+
 .btn{
-    
+
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: large;
     background-color: aqua;
