--- a/WebFundamentals/Week 1/Day 4/Core/profile.css
+++ b/WebFundamentals/Week 1/Day 4/Core/profile.css
@@ -158,12 +158,43 @@ a{
     left: 700px;
     bottom: 420px;
     width: 250px;
-    height: 200px;
+    height: 150px;
     background-color: whitesmoke;
     border: 2px solid grey;
 }
-.requests>h3{
-   width: 250PX;
-   height: 50px;
-   background-color:#000000;
+
+
+    
+
+
+h4{
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+    text-align: justify;
+    background-color: #333333;
+    height: 40px;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: smaller;
 }
+
+.connections{
+    position: relative;
+    right: 2px;
+    top:120px;
+    width: 250px;
+    height: 270px;
+    background-color: whitesmoke;
+    border: 2px solid grey;
+}
+h4{
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+    text-align: justify;
+    background-color: #333333;
+    height: 50px;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: smaller;}
